--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button type="button">Hire Me</button>
                 </div>
             <div class="content-img">
-                <img src="../data/1655689274907.jpg"  alt="">
+                <img src="./https://github.com/Robertgovind/Porfolio2.git"  alt="">
                 </div>
             </div>
         </div>
